refined disruptor experiment test and a first skeleton for performance test

--- a/src/main/web/WEB-INF/web.xml
+++ b/src/main/web/WEB-INF/web.xml
@@ -7,4 +7,9 @@
 		<servlet-name>Smoke</servlet-name>
 		<servlet-class>emodroid.web.SmokeTestServlet</servlet-class>
 	</servlet>
+
+	<servlet>
+		<servlet-name>SMS</servlet-name>
+		<servlet-class>emodroid.web.SMSServlet</servlet-class>
+	</servlet>
 </web-app>
