--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.yammer.metrics</groupId>
+			<artifactId>metrics-core</artifactId>
+			<version>2.1.3</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
 			<version>1.3</version>
@@ -95,6 +102,11 @@
 		<dependency>
 			<groupId>com.caucho</groupId>
 			<artifactId>resin</artifactId>
+			<version>4.0.30</version>
+		</dependency>
+		<dependency>
+			<groupId>com.caucho</groupId>
+			<artifactId>resin-hessian</artifactId>
 			<version>4.0.30</version>
 		</dependency>
 		<dependency>
